# mist

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
assets/: flow.desktop  mist.desktop
src/: audio.rs  audio_feedback.rs  cli.rs  config.rs  daemon.rs  hotkey.rs  icon.rs  lib.rs  main.rs  overlay.rs  paste.rs  stt.rs  tray.rs
src/cleanup/: candle.rs  command.rs  corrections.rs  fast.rs  mod.rs  none.rs  ollama.rs  replacements.rs
src/overlay/: mod.rs  renderer.rs
systemd/: flow.service  mist.service
tests/adversarial/: cleanup.rs  helpers.rs  input.rs
tests/common/: mod.rs
tests/integration/: cli.rs  dictation_flow.rs  setup_flow.rs
tests/prop/: cleanup.rs  config.rs  hotkey.rs
tests/regression/: link_xdo.rs  model_download.rs  whisper_tensor.rs
tests/unit/: cleanup.rs  config.rs  helpers.rs  hotkey.rs  paste.rs  stt.rs
